[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/scenes/fourth_scene.jpg" type="Texture" id=1]
[ext_resource path="res://assets/quit_button_idle.png" type="Texture" id=2]
[ext_resource path="res://assets/quit_button_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/common/button.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/scenes/fourth_scene_instructions.png" type="Texture" id=5]
[ext_resource path="res://sources/script/QuitButton.gd" type="Script" id=6]
[ext_resource path="res://assets/knife.png" type="Texture" id=7]
[ext_resource path="res://sources/script/Knife.gd" type="Script" id=8]
[ext_resource path="res://assets/banana_cut_three.png" type="Texture" id=9]
[ext_resource path="res://assets/banana_cut_two.png" type="Texture" id=10]
[ext_resource path="res://assets/banana_cut_one.png" type="Texture" id=11]
[ext_resource path="res://assets/whole_banana.png" type="Texture" id=12]
[ext_resource path="res://sources/script/CuttingScene.gd" type="Script" id=13]
[ext_resource path="res://assets/incredible_title.png" type="Texture" id=14]

[sub_resource type="Animation" id=3]
resource_name = "End"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("EndTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=1]
resource_name = "Init"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("InitTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "init_lines"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Knife:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Bananas:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CuttingLines:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="CuttingScene" type="Node2D"]
script = ExtResource( 13 )

[node name="Background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 962.713, 540.326 )
texture = ExtResource( 1 )

[node name="Buttons" type="Node2D" parent="."]

[node name="QuitButton" type="TextureButton" parent="Buttons"]
margin_left = 1438.83
margin_top = 2.51984
margin_right = 2038.83
margin_bottom = 302.52
rect_scale = Vector2( 0.799999, 0.799999 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSound" type="AudioStreamPlayer" parent="Buttons/QuitButton"]
stream = ExtResource( 4 )

[node name="InitTitle" type="Sprite" parent="."]
visible = false
position = Vector2( 985.522, 547.761 )
z_index = 1
texture = ExtResource( 5 )

[node name="EndTitle" type="Sprite" parent="."]
visible = false
position = Vector2( 968.349, 533.969 )
z_index = 1
texture = ExtResource( 14 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/End = SubResource( 3 )
anims/Init = SubResource( 1 )

[node name="Bananas" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bananas"]
position = Vector2( 978.345, 526.435 )
scale = Vector2( 0.858049, 0.637237 )
frames = SubResource( 2 )

[node name="Knife" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Knife"]
position = Vector2( 949.604, 556.742 )
texture = ExtResource( 7 )

[node name="KnifeHitbox" type="Area2D" parent="Knife"]

[node name="KnifeCollision" type="CollisionPolygon2D" parent="Knife/KnifeHitbox"]
polygon = PoolVector2Array( 946.734, 108.777, 973.643, 186.139, 987.942, 723.137, 914.78, 724.313, 918.143, 186.139 )

[node name="CuttingLines" type="Node2D" parent="."]

[node name="First" type="Node2D" parent="CuttingLines"]

[node name="Line" type="Line2D" parent="CuttingLines/First"]
position = Vector2( 191.922, 115.149 )
points = PoolVector2Array( 806.35, 141.724, 806.404, 706.9 )
default_color = Color( 0.0784314, 0.454902, 0.819608, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="FirstCollision" type="Area2D" parent="CuttingLines/First"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CuttingLines/First/FirstCollision"]
polygon = PoolVector2Array( 1023, 246, 1020, 834, 980, 834, 975, 246 )

[node name="Second" type="Node2D" parent="CuttingLines"]

[node name="Line" type="Line2D" parent="CuttingLines/Second"]
position = Vector2( -96.9854, 140.547 )
points = PoolVector2Array( 806.35, 141.724, 806.404, 706.9 )
default_color = Color( 0.0784314, 0.454902, 0.819608, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="SecondCollision" type="Area2D" parent="CuttingLines/Second"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CuttingLines/Second/SecondCollision"]
position = Vector2( -288.325, 22.6923 )
polygon = PoolVector2Array( 1023, 246, 1020, 834, 980, 834, 975, 246 )

[node name="Third" type="Node2D" parent="CuttingLines"]

[node name="Line" type="Line2D" parent="CuttingLines/Third"]
position = Vector2( 455.43, 129.435 )
points = PoolVector2Array( 806.35, 141.724, 806.404, 706.9 )
default_color = Color( 0.0784314, 0.454902, 0.819608, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="ThirdCollision" type="Area2D" parent="CuttingLines/Third"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CuttingLines/Third/ThirdCollision"]
position = Vector2( 262.963, 14.6832 )
polygon = PoolVector2Array( 1023, 246, 1020, 834, 980, 834, 975, 246 )
[connection signal="button_up" from="Buttons/QuitButton" to="Buttons/QuitButton" method="_on_QuitButton_button_up"]
[connection signal="pressed" from="Buttons/QuitButton" to="Buttons/QuitButton" method="_on_QuitButton_pressed"]
[connection signal="input_event" from="Knife/KnifeHitbox" to="Knife" method="_on_KnifeHitbox_input_event"]
